Add JRE version specific JVM options to reliably run (fork) GemFire/Geode servers.